--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -22,6 +22,7 @@
                     <a href="{{ url_for('main.index') }}" class="text-lg font-medium hover:text-blue-100 transition duration-300 ease-in-out">Home</a>
                     <a href="{{ url_for('main.about') }}" class="text-lg font-medium hover:text-blue-100 transition duration-300 ease-in-out">About</a>
                     <a href="{{ url_for('main.bid_estimator') }}" class="text-lg font-medium hover:text-blue-100 transition duration-300 ease-in-out">Bid Estimator</a>
+                    <a href="{{ url_for('main.subscribe') }}" class="text-lg font-medium hover:text-blue-100 transition duration-300 ease-in-out">Subscribe</a>
                     <a href="{{ url_for('main.contact') }}" class="text-lg font-medium hover:text-blue-100 transition duration-300 ease-in-out">Contact</a>
                     {% if current_user.is_authenticated %}
                         <a href="{{ url_for('main.custom_bidder') }}" class="text-lg font-medium hover:text-blue-100 transition duration-300 ease-in-out">Custom Bidder</a>
@@ -45,9 +46,11 @@
                     <a href="{{ url_for('main.index') }}" class="text-lg font-medium hover:text-blue-100 transition duration-300 ease-in-out">Home</a>
                     <a href="{{ url_for('main.about') }}" class="text-lg font-medium hover:text-blue-100 transition duration-300 ease-in-out">About</a>
                     <a href="{{ url_for('main.bid_estimator') }}" class="text-lg font-medium hover:text-blue-100 transition duration-300 ease-in-out">Bid Estimator</a>
+                    <a href="{{ url_for('main.subscribe') }}" class="text-lg font-medium hover:text-blue-100 transition duration-300 ease-in-out">Subscribe</a>
                     <a href="{{ url_for('main.contact') }}" class="text-lg font-medium hover:text-blue-100 transition duration-300 ease-in-out">Contact</a>
                     {% if current_user.is_authenticated %}
                         <a href="{{ url_for('main.custom_bidder') }}" class="text-lg font-medium hover:text-blue-100 transition duration-300 ease-in-out">Custom Bidder</a>
+                        
                         <a href="{{ url_for('main.account') }}" class="text-lg font-medium hover:text-blue-100 transition duration-300 ease-in-out">Account</a>
                         <a href="{{ url_for('main.logout') }}" class="text-lg font-medium hover:text-blue-100 transition duration-300 ease-in-out">Logout</a>
                     {% else %}
